# Bubble

./: .gitignore  README.md  package-lock.json  package.json
backend/: Cargo.toml
backend/src/: lib.rs  main.rs
docs/superpowers/plans/: 2026-06-25-monorepo-integrated-app.md
frontend/: index.html  package.json  vite.config.ts
frontend/src/: App.tsx  styles.css
scripts/: build.mjs  dev.mjs  run-command.mjs  test.mjs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
