[package]
name = "bubble-desktop"
version = "0.1.0"
description = "Bubble desktop floating window"
authors = ["Bubble"]
edition = "2024"
build = "build.rs"

[lib]
name = "bubble_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
tauri = { version = "2", features = ["macos-private-api"] }

